--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hbler/style",
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack serve --port 9002",
     "start:standalone": "webpack serve --env standalone",
     "build": "concurrently pnpm:build:*",
     "build:webpack": "webpack --mode=production",
@@ -13,7 +13,8 @@
     "test": "cross-env BABEL_ENV=test jest --passWithNoTests",
     "watch-tests": "cross-env BABEL_ENV=test jest --watch",
     "coverage": "cross-env BABEL_ENV=test jest --coverage",
-    "build:types": "tsc"
+    "build:types": "tsc",
+    "watch-tw": "npx tailwindcss -i ./src/local.css -o ./src/tw.css --watch"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
